.churn/clang-tools-extra/test/modularize/Inputs/CompileError/CompileError.dir
{
    "directory name": "llvm-project/clang-tools-extra/test/modularize/Inputs/CompileError",
    "score.sum": 6.099602068851199e-06,
    "sha.latest": "a171d248ca34b8b6f8de11d42a83ad981285963a",
    "time.latest": 1717834758.3053198,
    "formatted_time": "2024-06-08 13:49:18.305322",
    "filescores": {
        "HasError.h": 0.0,
        "Level1A.h": 0.0,
        "module.modulemap": 100.0
    },
    "subdirscores": {},
    "score.percentage": 4.03577459186528
}